<resources>
    <string name="app_name">eMarketShops</string>
    <string name="title_home">หน้าหลัก</string>
    <string name="title_cart">ตะกร้าสินค้า</string>
    <string name="title_sms">ข้อความ</string>
    <string name="title_profile">ข้อมูลของฉัน</string>
    <string name="txt_btnCateAll">หมวดหมู่ทั้งหมด</string>
    <string name="txt_btnQur">ขอใบเสนอราคา</string>
    <string name="txt_btnRedyDeli">พร้อมจัดส่ง</string>
    <string name="txt_btnShop">World Mall</string>
    <string name="txt_btnRegis">เข้าสู่ระบบ</string>
    <string name="txt_btnMywish">รายการโปรดของฉัน</string>
    <string name="txt_btnCallHistory">ประวัติการเรียกดู</string>
    <string name="txt_ManagPO">จัดการคำสั่งซื้อ</string>
    <string name="txt_callData">สอบถามข้อมูล</string>
    <string name="txt_RequetQtu">ขอใบเสนอราคา</string>
    <string name="txt_ManagQut">จัดการการเสนอราคา</string>
    <string name="txt_settingManag">ตั้งค่าการจัดหา</string>
    <string name="txt_myCuopon">คูปองของฉัน</string>
    <string name="txt_myAddress">ที่อยู่สำหรับจัดส่งสินค้า</string>
    <string name="txt_AppComplain">ข้อเสนอแนะเกี่ยวกับแอป</string>
    <string name="txt_heplCenter">เงื่อนไขและข้อตกลง</string>
    <string name="txt_Currencytool">เครื่องมือการแปลงค่าสกุลเงิน</string>
    <string name="txt_Setting">การตั้งค่า</string>
    <string name="txt_login">เข้าสู่ระบบ</string>
    <string name="txt_btnForgetPass">ลืมรหัสผ่าน</string>
    <string name="txt_onAcount">หากไม่มีบัญชี</string>
    <string name="txt_pleRegis">กรุณาสมัคร</string>
    <string name="txt_Regis">ลงทะเบียน</string>
    <string name="txt_regigtext1">สมัครใช้งาน กรอกข้อมูลเพื่อลงทะเบียน</string>
    <string name="txt_registext2">กำหนดจะต้องเป็นตัวอักษรและตัวเลข ขั้นต่ำ 8 ตัวอักษร แต่ไม่เกิน 20 ตัวอักษร</string>
    <string name="txt_registext3">*ระบบจะส่งลิ้งค์เพื่อยืนยันตัวตนไปยังอีเมลของท่าน</string>
    <string name="txt_registext4">*ชื่อผู้ใช้</string>
    <string name="txt_registext5">*อีเมล</string>
    <string name="txt_registext6">*รหัสผ่าน</string>
    <string name="txt_registext7">*ยืนยันรหัสผ่าน</string>
    <string name="txt_registext8">*เบอร์โทรศัพท์</string>
    <string name="txt_registext9">*เบอร์ โทรศัพท์</string>
    <string name="txt_addTocart">เพิ่มไปยังรถเข็น</string>
    <string name="txt_buyItem">ซื้อสินค้า</string>
    <string name="txt_pay">ชำระเงิน</string>
    <string name="txt_supTotal">รวมทั้งหมด : </string>
    <string name="bank_pay">โอน/ชำระผ่านบัญชีธนาคาร</string>
    <string name="creditcard_pay">บัตรเครดิต/บัตรเดบิต</string>
    <string name="txt_totalpay">ยอดชำระ :</string>
    <string name="txt_timeCoundPay">กรุณาทำการชำระเงินภายในเวลา :</string>
    <string name="label_Requotation">ขอใบเสนอราคา</string>
    <string name="label_Requotation_itemdata">ข้อมูลพื้นฐานสินค้า</string>
    <string name="label_Requotation_itemname">ชื่อสินค้า</string>
    <string name="label_Requotation_category">หมวดหมู่</string>
    <string name="label_Requotation_itemtype">ประเภท</string>
    <string name="label_Requotation_qty">จำนวน</string>
    <string name="label_Requotation_itemunit">หน่วย</string>
    <string name="label_Requotation_fbo">ข้อตกลง</string>
    <string name="label_Requotation_price">ราคาต่อหน่วยที่ต้องการ</string>
    <string name="label_Requotation_detail">รายละเอียด</string>
    <string name="label_Requotation_shipping">วิธีการจัดส่ง</string>
    <string name="label_Requotation_shipplocation">ปลายทางจัดส่ง</string>
    <string name="label_Requotation_shippingtime">ระยะเวลาจัดส่ง</string>
    <string name="label_Requotation_payment">เงื่อนไขการชำระเงิน</string>
    <string name="label_Requotation_checkbox">ยินยอมที่จะปฏิบัติตาม กฎการโพสต์คำขอซื้อ</string>
    <string name="label_Requotation_subject">คำนำ</string>
    <string name="label_Requotation_date">วันที่</string>
    <string name="label_Requotation_list">รายการขอใบเสนอราคา</string>
    <string name="gen_please_wait">Please wait</string>
    <string name="gen_pdf_file">Creat PDF File</string>
    <string name="txt_btnquo">ใบเสนอราคา</string>
    <string name="txt_btnchat">สนทนา</string>
    <string name="txt_category">หมวดหมู่</string>
    <string name="txt_chatlist">พูดคุย</string>
    <string name="txt_logout">ออกจากระบบ</string>
    <string name="txt_address">ที่อยู่</string>
    <string name="txt_provinc">จังหวัด</string>
    <string name="txt_distric">อำเภอ/เขต</string>
    <string name="txt_subDistric">ตำบล/แขวง</string>
    <string name="txt_zipcode">รหัสไปรษณีย์</string>
    <string name="txt_phone">เบอร์โทรศัพท์</string>
    <string name="txt_save">บันทึก</string>
    <string name="txt_name">ชื่อ</string>
    <string name="txt_information">สอบถามข้อมูล</string>
    <string name="txt_head_information">ฝ่ายบริการลูกค้า</string>
    <string name="txt_information_title">หากมีคำถามหรือข้อแนะนำ สามรถแจ้งได้ที่นี่ และเราจะติดต่อกลับคุณโดยเร็ว</string>
    <string name="txt_detail">รายละเอียด</string>
    <string name="txt_myorder">คำสั่งซื้อของฉัน</string>
    <string name="txt_btnMyorder1">ที่ต้องชำระ</string>
    <string name="txt_btnMyorder2">ที่ต้องจัดส่ง</string>
    <string name="txt_btnMyorder3">ที่ต้องได้รับ</string>
    <string name="txt_btnMyorder4">สำเร็จ</string>
    <string name="txt_btnMyorder5">ยกเลิก</string>
    <string name="txt_btnMyorder6">คืนสินค้า</string>
    <string name="txt_lastcate">หมวดหมู่ ที่ดูล่าสุด</string>
    <string name="txt_shipping_option">ตัวเลือกการจัดส่ง</string>
    <string name="txt_active_product">สินค้าพร้อมจัดส่ง</string>
    <string name="txt_soldout">สินค้าหมด</string>
    <string name="txt_btn_view_quatation">ดูใบคำขอเสนอราคา</string>
    <string name="txt_quatation">ใบเสนอราคา</string>
    <string name="txt_sub_category">หมวดหมู่ย่อย</string>
    <string name="txt_select_all">เลือกทั้งหมด</string>
</resources>