<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/txtQuoCate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_Requotation_category"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtQuoProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_Requotation_itemname"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/txtDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Des" />

            <TextView
                android:id="@+id/txtQuoDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_Requotation_date"
                android:textColor="@color/red500" />

            <TextView
                android:id="@+id/txtQuoNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="quoNo"
                android:textSize="10sp" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>